// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should change search value 1`] = `
<MockRouter>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/1/20/title%3Aasc",
            "search": "?backPath=%2F",
          },
          Object {
            "hash": "",
            "pathname": "/1/20/title%3Aasc",
            "search": "?backPath=%2F&search=",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/1/20/title%3Aasc",
          "search": "?backPath=%2F&search=",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Route
      path="/:page/:pageSize/:sort"
      render={[Function]}
    >
      <SearchField
        history={
          Object {
            "action": "PUSH",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/1/20/title%3Aasc",
                "search": "?backPath=%2F",
              },
              Object {
                "hash": "",
                "pathname": "/1/20/title%3Aasc",
                "search": "?backPath=%2F&search=",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 1,
            "length": 2,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/1/20/title%3Aasc",
              "search": "?backPath=%2F&search=",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        page="1"
        pageSize="20"
        query="?backPath=%2F&search="
        routeParams={
          Object {
            "page": "1",
            "pageSize": "20",
            "sort": "title:asc",
          }
        }
        sort="title:asc"
      >
        <Search
          method="GET"
          onSubmit={[Function]}
          showMobile={true}
        >
          <div
            className="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down show"
          >
            <div
              className="container-fluid container-fluid-max-xl"
            >
              <form
                method="GET"
                onSubmit={[Function]}
                role="search"
              >
                <ForwardRef>
                  <div
                    className="input-group"
                  >
                    <ForwardRef>
                      <div
                        className="input-group-item"
                      >
                        <ForwardRef
                          aria-label="Search"
                          className="form-control input-group-inset input-group-inset-after"
                          onChange={[Function]}
                          placeholder="search-for"
                          type="text"
                          value=""
                        >
                          <input
                            aria-label="Search"
                            className="form-control form-control input-group-inset input-group-inset-after"
                            onChange={[Function]}
                            placeholder="search-for"
                            type="text"
                            value=""
                          />
                        </ForwardRef>
                        <ForwardRef
                          after={true}
                          tag="span"
                        >
                          <span
                            className="input-group-inset-item input-group-inset-item-after"
                          >
                            <ForwardRef
                              displayType="unstyled"
                              symbol="search"
                              type="submit"
                            >
                              <ForwardRef
                                displayType="unstyled"
                                monospaced={true}
                                type="submit"
                              >
                                <button
                                  className="btn btn-monospaced btn-unstyled"
                                  type="submit"
                                >
                                  <ForwardRef
                                    symbol="search"
                                  >
                                    <svg
                                      className="lexicon-icon lexicon-icon-search"
                                      key="search"
                                      role="presentation"
                                    >
                                      <use
                                        xlinkHref="#search"
                                      />
                                    </svg>
                                  </ForwardRef>
                                </button>
                              </ForwardRef>
                            </ForwardRef>
                          </span>
                        </ForwardRef>
                      </div>
                    </ForwardRef>
                  </div>
                </ForwardRef>
              </form>
            </div>
          </div>
        </Search>
      </SearchField>
    </Route>
  </Router>
</MockRouter>
`;

exports[`Should render component 1`] = `
<div
  className="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down show"
>
  <div
    className="container-fluid container-fluid-max-xl"
  >
    <form
      method="GET"
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="input-group"
      >
        <div
          className="input-group-item"
        >
          <input
            aria-label="Search"
            className="form-control form-control input-group-inset input-group-inset-after"
            disabled={true}
            onChange={[Function]}
            placeholder="search-for"
            type="text"
            value={null}
          />
          <span
            className="input-group-inset-item input-group-inset-item-after"
          >
            <button
              className="btn btn-monospaced btn-unstyled"
              type="submit"
            >
              <svg
                className="lexicon-icon lexicon-icon-search"
                role="presentation"
              >
                <use
                  xlinkHref="#search"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </form>
  </div>
</div>
`;
